--- a/presupuesto_airovac/reports/presu.xml
+++ b/presupuesto_airovac/reports/presu.xml
@@ -177,7 +177,7 @@
                                                 <tr class="">
                                                     <td name="td_partida" class="text-center">
                                                         <div class="row text-center" >
-                                                            <span style="font-family: verdana !important;font-weight: bold !important; font-size: 10px !important;" t-field="line.e_partida"></span>
+                                                            <span style="font-family: verdana !important;font-weight: bold !important; font-size: 10pt !important;" t-field="line.e_partida"></span>
                                                         </div>
                                                         <div class="row">
                                                             <img class="img-fluid" t-att-src="'data:image/png;base64,%s' % to_text(line.product_template_id.image_1920)"/>
@@ -185,33 +185,33 @@
 
                                                     </td>
                                                     <td name="th_description">
-                                                        <strong><span style="font-family: verdana !important;font-weight: bold !important; font-size: 10px !important;" t-field="line.product_template_id.default_code"></span></strong><br/>
+                                                        <strong><span style="font-family: verdana !important;font-weight: bold !important; font-size: 10pt !important;" t-field="line.product_template_id.default_code"></span></strong><br/>
                                                         <t t-if = "line.product_template_id.description_sale != False" >
 
-                                                            <span style="font-family: verdana !important;font-weight: normal !important; font-size: 9px;!important" t-field="line.product_template_id.description_sale"></span>
+                                                            <span style="font-family: verdana !important;font-weight: normal !important; font-size: 9pt;!important" t-field="line.product_template_id.description_sale"></span>
                                                         </t>
                                                         <t t-if = "line.product_template_id.description_sale == False" >
-                                                            <span style="font-family: verdana !important;font-weight: normal !important; font-size: 9px;!important" t-field="line.product_template_id.name"></span>
+                                                            <span style="font-family: verdana !important;font-weight: normal !important; font-size: 9pt;!important" t-field="line.product_template_id.name"></span>
                                                         </t>
 
                                                     </td>
                                                     <td name="td_etiqueta_a" class="text-center" style="vertical-align:middle">
-                                                        <span style="font-family: verdana !important;font-weight: normal !important; font-size: 10px !important;"  t-field="line.e_etiqueta_line_a"></span>
+                                                        <span style="font-family: verdana !important;font-weight: normal !important; font-size: 10pt !important;"  t-field="line.e_etiqueta_line_a"></span>
                                                     </td>
                                                     <td name="td_etiqueta_b" class="text-center" style="vertical-align:middle">
-                                                        <span style="font-family: verdana !important;font-weight: normal !important; font-size: 10px !important;" t-field="line.e_etiqueta_line_b"></span>
+                                                        <span style="font-family: verdana !important;font-weight: normal !important; font-size: 10pt !important;" t-field="line.e_etiqueta_line_b"></span>
                                                     </td>
                                                     <td name="td_quantity" class="text-center" style="vertical-align:middle">
-                                                        <span style="font-family: verdana !important;font-weight: normal !important; font-size: 10px !important;"  t-field="line.product_uom_qty"></span>
+                                                        <span style="font-family: verdana !important;font-weight: normal !important; font-size: 10pt !important;"  t-field="line.product_uom_qty"></span>
                                                     </td>
                                                     <td name="td_priceunit" class="text-center" style="vertical-align:middle">
-                                                        <span style="font-family: verdana !important;font-weight: normal !important; font-size: 10px !important;" t-field="line.price_unit"></span>
+                                                        <span style="font-family: verdana !important;font-weight: normal !important; font-size: 10pt !important;" t-field="line.price_unit"></span>
                                                     </td>
                                                      <td name="td_subtotal" class="text-center o_price_total" style="vertical-align:middle">
-                                                        <span style="font-family: verdana !important;font-weight: normal !important; font-size: 10px !important;" class="oe_currency_value" t-field="line.price_subtotal"></span>
+                                                        <span style="font-family: verdana !important;font-weight: normal !important; font-size: 10pt !important;" class="oe_currency_value" t-field="line.price_subtotal"></span>
                                                     </td>
                                                     <td name="td_e_t_e" class="text-center" style="vertical-align:middle">
-                                                        <span style="font-family: verdana !important;font-weight: normal !important; font-size: 10px !important;" t-field="line.e_t_e"></span>
+                                                        <span style="font-family: verdana !important;font-weight: normal !important; font-size: 10pt !important;" t-field="line.e_t_e"></span>
                                                     </td>
 
                                                 </tr>
@@ -244,13 +244,13 @@
                                         <div class="col-4">
                                             <table class="table table-sm">
                                                 <tbody><tr class="border-black o_subtotal" style="">
-                                                    <td name="td_amount_untaxed_label"><span style="font-family: verdana !important;font-weight: bold !important; font-size: 10px !important;">Subtotal <![CDATA[&nbsp;]]> <t t-esc="doc.pricelist_id.currency_id.name"></t> </span></td>
+                                                    <td name="td_amount_untaxed_label"><span style="font-family: verdana !important;font-weight: bold !important; font-size: 10pt !important;">Subtotal <![CDATA[&nbsp;]]> <t t-esc="doc.pricelist_id.currency_id.name"></t> </span></td>
                                                     <td name="td_amount_untaxed" class="text-right">
-                                                        <span style="font-family: verdana !important;font-weight: normal !important; font-size: 10px !important;" ><span class="oe_currency_value" t-field="doc.amount_untaxed"></span></span>
+                                                        <span style="font-family: verdana !important;font-weight: normal !important; font-size: 10pt !important;" ><span class="oe_currency_value" t-field="doc.amount_untaxed"></span></span>
                                                     </td>
                                                 </tr>
 
-                                                    <tr class="border-black o_total" style="font-family: verdana !important;font-weight: normal !important; font-size: 10px !important;">
+                                                    <tr class="border-black o_total" style="font-family: verdana !important;font-weight: normal !important; font-size: 10pt !important;">
 
                                                         <td name="td_amount_by_group_label">
                                                             <span>IVA 16% </span>
@@ -262,9 +262,9 @@
                                                     </tr>
 
                                                     <tr class="border-black o_total">
-                                                        <td name="td_amount_total_label"><span style="font-family: verdana !important;font-weight: bold !important; font-size: 10px !important;">Total  <![CDATA[&nbsp;]]> <t t-esc="doc.pricelist_id.currency_id.name"></t> </span></td>
+                                                        <td name="td_amount_total_label"><span style="font-family: verdana !important;font-weight: bold !important; font-size: 10pt !important;">Total  <![CDATA[&nbsp;]]> <t t-esc="doc.pricelist_id.currency_id.name"></t> </span></td>
                                                         <td name="td_amount_total" class="text-right">
-                                                            <span style="font-family: verdana !important;font-weight: normal !important; font-size: 10px !important;" ><span class="oe_currency_value" t-field="doc.amount_total"></span></span>
+                                                            <span style="font-family: verdana !important;font-weight: normal !important; font-size: 10pt !important;" ><span class="oe_currency_value" t-field="doc.amount_total"></span></span>
                                                         </td>
                                                     </tr>
                                                 </tbody>
