--- a/presupuesto_airovac/reports/presu.xml
+++ b/presupuesto_airovac/reports/presu.xml
@@ -136,24 +136,24 @@
                                     </div>
                                 </div>
 
-                                <div class="row mt32 mb32" id="informations">
-                                    <div class="col-auto mw-100 mb-2">
+                                <div class="row" ><!--row fechas y comercial-->
+                                    <div class="col-4">
                                         <span style="font-family: verdana !important;font-weight: bold !important; font-size: 11pt !important;" >Fecha de cotización:</span>
-                                        <p class="m-0" style="font-family: verdana !important;font-weight: normal !important; font-size: 10px !important;" >
+                                        <p class="m-0" style="font-family: verdana !important;font-weight: normal !important; font-size: 10pt !important;" >
                                             <span t-field="doc.date_order" t-options='{"format": "dd/MM/yyyy"}'  ></span>
                                         </p>
                                     </div>
-                                    <div class="col-auto mw-100 mb-2">
+                                    <div class="col-4">
                                         <span style="font-family: verdana !important;font-weight: bold !important; font-size: 11pt !important;" >Fecha de expiración:</span>
-                                        <p  style="font-family: verdana !important;font-weight: normal !important; font-size: 10px !important;">
+                                        <p  style="font-family: verdana !important;font-weight: normal !important; font-size: 10pt !important;">
                                             <span t-field="doc.validity_date"   ></span>
                                         </p>
                                     </div>
-                                    <div class="col-auto mw-100 mb-2">
+                                    <div class="col-4 ">
                                         <span style="font-family: verdana !important;font-weight: bold !important; font-size: 11pt !important;" >Comercial:</span>
-                                        <p style="font-family: verdana !important;font-weight: normal !important; font-size: 10px !important;" ><span t-field="doc.create_uid.name"></span></p>
+                                        <p style="font-family: verdana !important;font-weight: normal !important; font-size: 10pt !important;" ><span t-field="doc.create_uid.name"></span></p>
                                     </div>
-                                </div>
+                                </div><!--row fechas y comercial-->
 
                                 <!--Tabla-->
                                 <table class="table table-sm o_main_table">
@@ -180,7 +180,12 @@
                                                             <span style="font-family: verdana !important;font-weight: bold !important; font-size: 10pt !important;" t-field="line.e_partida"></span>
                                                         </div>
                                                         <div class="row">
-                                                            <img class="img-fluid" t-att-src="'data:image/png;base64,%s' % to_text(line.product_template_id.image_1920)"/>
+                                                            <t t-if = "product_template_id.image_1920 != False" >
+                                                                <img class="img-fluid" t-att-src="'data:image/png;base64,%s' % to_text(line.product_template_id.image_1920)"/>
+                                                            </t>
+                                                            <t t-if = "product_template_id.image_1920 == False" >
+                                                                <img class="img-fluid" t-att-src="'/presupuesto_airovac/static/src/img/caja.jpg'" />
+                                                            </t>
                                                         </div>
 
                                                     </td>
