--- a/presupuesto_airovac/reports/presu.xml
+++ b/presupuesto_airovac/reports/presu.xml
@@ -72,7 +72,7 @@
                                         <div class="oe_structure"></div>
                                         <h2 style="font-family: verdana !important;font-weight: bold !important; font-size: 18pt;!important">
                                             <span>Cotización # </span>
-                                            <span t-field="doc.name"></span>
+                                            <span style="font-family: verdana !important;font-weight: normal !important; font-size: 10pt !important; vertical-align:middle !important;" t-field="doc.name"></span>
                                         </h2>
 
                                         <span t-field="doc.e_desciption"></span>
@@ -151,7 +151,7 @@
 <!--                                </div>-->
 
                                 <div class="row" ><!--row fechas y comercial-->
-                                    <div class="col-3">
+                                    <div class="col-3 text-left">
                                         <p  style="font-family: verdana !important;font-weight: normal !important; font-size: 9pt !important;" >
                                             <span>Contacto:</span><br/>
                                             <span>Fecha de cotización:</span><br/>
@@ -159,18 +159,19 @@
                                             <span>Condiciones:</span>
                                          </p>
                                     </div>
-                                    <div class="col-4">
+                                    <div class="col-4 text-left">
                                         <p  style="font-family: verdana !important;font-weight: normal !important; font-size: 9pt !important;" >
+                                            <span t-field="doc.create_uid.name"></span><br/>
                                             <span t-field="doc.date_order" t-options='{"format": "dd/MM/yyyy"}'  ></span><br/>
                                             <span t-field="doc.validity_date"   ></span><br/>
-                                            <span t-field="doc.create_uid.name"></span><br/>
                                             <span t-field="doc.payment_term_id.name"></span>
+
                                         </p>
                                     </div>
                                     <div class="col-3">
 
                                     </div>
-                                    <div class="col-3" style="font-family: verdana !important;font-weight: normal !important; font-size: 10pt !important;">
+                                    <div class="col-3 text-left" style="font-family: verdana !important;font-weight: normal !important; font-size: 10pt !important; vertical-align: text-top !important;">
 
                                              <span itemprop="name" t-field="doc.partner_id.parent_id.name"></span><br/>
                                              <span itemprop="name" t-field="doc.partner_id.name"></span><br/>
