--- a/presupuesto_airovac/reports/presu.xml
+++ b/presupuesto_airovac/reports/presu.xml
@@ -182,12 +182,13 @@
                                 </div><!--row fechas y comercial-->
 
                                 <div class="row"><!--row fechas y comercial-->
-                                    <span style="font-family: verdana !important;font-weight: normal !important; font-size: 9pt !important;" >
-                                        Estimado(a),</span><br/>
-                                    <span style="font-family: verdana !important;font-weight: normal !important; font-size: 9pt !important;" >
-                                        En respuesta a su amable solicitud, presento la siguiente cotización
-                                    </span>
-
+                                     <div class="col-12 text-left">
+                                        <span style="font-family: verdana !important;font-weight: normal !important; font-size: 9pt !important;" >
+                                            Estimado(a),</span><br/>
+                                        <span style="font-family: verdana !important;font-weight: normal !important; font-size: 9pt !important;" >
+                                            En respuesta a su amable solicitud, presento la siguiente cotización
+                                        </span>
+                                     </div>
                                 </div><!--row fechas y comercial-->
                                 <!--Tabla-->
                                 <table class="table table-sm o_main_table">
@@ -211,7 +212,7 @@
                                                 <tr class="">
                                                     <td name="td_partida" class="text-center">
                                                         <div class="row" >
-                                                            <di class="col-12 text-center">
+                                                            <di class="col-12  center-block text-center">
                                                             <span style="font-family: verdana !important;font-weight: bold !important; font-size: 10pt !important;" t-field="line.e_partida"></span>
                                                             </di>
                                                         </div>
