--- a/presupuesto_airovac/reports/presu.xml
+++ b/presupuesto_airovac/reports/presu.xml
@@ -212,16 +212,16 @@
                                                 <tr class="">
                                                     <td name="td_partida" class="text-center">
                                                         <div class="row" >
-                                                            <di class="col-12  center-block text-center">
+                                                            <div class="col-12  text-center">
                                                             <span style="font-family: verdana !important;font-weight: bold !important; font-size: 10pt !important;" t-field="line.e_partida"></span>
-                                                            </di>
+                                                            </div>
                                                         </div>
                                                         <div class="row">
                                                             <t t-if = "line.product_template_id.image_1920 != False" >
-                                                                <img class="img-fluid" t-att-src="'data:image/png;base64,%s' % to_text(line.product_template_id.image_1920)"/>
+                                                                <img class="img-fluid" t-att-src="'data:image/png;base64,%s' % to_text(line.product_template_id.image_1920)" style="max-height: 50px;"/>
                                                             </t>
                                                             <t t-if = "line.product_template_id.image_1920 == False" >
-                                                                <img class="img-fluid" t-att-src="'/presupuesto_airovac/static/src/img/caja.jpg'" />
+                                                                <img class="img-fluid" t-att-src="'/presupuesto_airovac/static/src/img/caja.jpg'" style="max-height: 50px;" />
                                                             </t>
                                                         </div>
 
